added swagger documentation to userRouter
